improve: counts are more dynamic, not included by default, better indexes
